@@ -1,0 +1,2 @@
+prog: relative2
+vgopts: -q
